--- a/app/depends.gradle
+++ b/app/depends.gradle
@@ -6,6 +6,8 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.android.support:multidex:1.0.3'
+
+    implementation project(':util')
     implementation 'com.jakewharton:butterknife:10.0.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.0.0'
     implementation 'com.gitee.eajon:RxHttp:2.0.3'
@@ -15,7 +17,7 @@ dependencies {
     //无关测试使用
     //glide
     implementation 'com.github.bumptech.glide:glide:4.8.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
     implementation 'com.github.bumptech.glide:okhttp3-integration:4.8.0'
     implementation 'jp.wasabeef:glide-transformations:3.3.0'
 
