--- a/util/build.gradle
+++ b/util/build.gradle
@@ -1,15 +1,17 @@
-apply plugin: 'com.android.application'
-apply from: 'depends.gradle'
+apply plugin: 'com.android.library'
+
 android {
     compileSdkVersion 28
+
+
     defaultConfig {
-        applicationId "cn.csfz.eajon.test"
-        minSdkVersion 15
+        minSdkVersion 16
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
     }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -17,9 +19,13 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility '1.8'
-        targetCompatibility '1.8'
+        sourceCompatibility = '1.8'
+        targetCompatibility = '1.8'
     }
+
 }
 
+dependencies {
 
+    api 'com.google.code.gson:gson:2.8.2'
+}
