--- a/util/build.gradle
+++ b/util/build.gradle
@@ -28,4 +28,5 @@ android {
 dependencies {
 
     api 'com.google.code.gson:gson:2.8.2'
+    implementation 'com.google.android.material:material:1.0.0'
 }
