--- a/util/build.gradle
+++ b/util/build.gradle
@@ -28,5 +28,5 @@ android {
 dependencies {
 
     api 'com.google.code.gson:gson:2.8.2'
-    implementation 'androidx.core:core:1.0.2'
+    api 'androidx.core:core:1.0.2'
 }
