--- a/app/depends.gradle
+++ b/app/depends.gradle
@@ -10,15 +10,15 @@ dependencies {
     implementation project(':util')
     implementation 'com.jakewharton:butterknife:10.0.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.0.0'
-    implementation 'com.gitee.eajon:RxHttp:2.0.3'
+    implementation 'com.github.eajon:RxHttp:2.2.2'
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
     implementation 'com.github.eajon:FlycoTabLayout:2.0.3'
 //    implementation 'com.pranavpandey.android:dynamic-dialogs:2.2.1'
     //无关测试使用
     //glide
-    implementation 'com.github.bumptech.glide:glide:4.8.0'
+    implementation 'com.github.bumptech.glide:glide:4.9.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
-    implementation 'com.github.bumptech.glide:okhttp3-integration:4.8.0'
+    implementation 'com.github.bumptech.glide:okhttp3-integration:4.9.0'
     implementation 'jp.wasabeef:glide-transformations:3.3.0'
 
 
