--- a/util/build.gradle
+++ b/util/build.gradle
@@ -27,6 +27,9 @@ android {
 
 dependencies {
 
-    api 'com.google.code.gson:gson:2.8.5'
-    api 'androidx.core:core:1.0.2'
+    compileOnly 'com.google.code.gson:gson:2.8.5'
+    compileOnly 'androidx.core:core:1.1.0'
+    compileOnly 'io.reactivex.rxjava2:rxandroid:2.1.0'
+    compileOnly 'io.reactivex.rxjava2:rxjava:2.2.3'
+    compileOnly 'com.trello.rxlifecycle3:rxlifecycle-components:3.0.0'
 }
